@@ -31,5 +31,7 @@ REM,		INS_SECONDARY,	I_REM,		NULL
 SUM,		INS_SECONDARY,	I_SUM,		NULL
 DIFF,		INS_SECONDARY,	I_DIFF,		NULL
 PROD,		INS_SECONDARY,	I_PROD,		NULL
+NEG,		INS_SECONDARY,	I_NEG,		NULL
+NOT,		INS_SECONDARY,	I_NOT,		NULL
 %%
 
